# opencv-cpp-ch2

./: CMakeLists.txt  README.md  main.cpp
